[tool.poetry]
name = "opensourceaudiobook2pagenumber"
version = "0.1.0"
description = "An open source only audiobook recognition ystem"
authors = ["Josh Mackey <joshzpate@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
defusedxml = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
